--- a/Mila_website/css/style.css
+++ b/Mila_website/css/style.css
@@ -219,6 +219,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
@@ -241,7 +242,7 @@ img {
 }
 a {
   text-decoration: none;
-  color: #000000;
+  color: #181818;
 }
 /* ------------------------------- RECURRENT -- */
 .btnt {
@@ -290,7 +291,7 @@ a {
 .fancybox-caption > span {
   background-color: transparent;
   margin: 0 auto;
-  color: #ffffff;
+  color: #181818;
   font-size: 18px;
   letter-spacing: 2px;
   display: inline-block;
@@ -307,34 +308,53 @@ header {
   margin: 0 auto;
 }
 header div.nav {
+  z-index: 10;
+  background-color: #ffffff;
   position: fixed;
-  height: 15%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 10%;
+  transition: height 0.3s ease;
+}
+header div.nav div.navbar {
   width: 1440px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-header div.nav div.logo {
+header div.nav div.navbar div.logo {
   width: fit-content;
 }
-header div.nav div.menu {
+header div.nav div.navbar div.menu {
   width: 50%;
 }
-header div.nav div.menu ul {
+header div.nav div.navbar div.menu ul {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
-header div.nav div.menu ul li {
+header div.nav div.navbar div.menu ul li {
   width: -webkit-fill-available;
   list-style-type: none;
   text-align: end;
 }
-header div.nav div.menu ul li a {
-  font-weight: 600;
+header div.nav div.navbar div.menu ul li a {
+  font-weight: 500;
   font-size: 16px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
-header div.nav div.menu ul li a img {
+header div.nav div.navbar div.menu ul li a img {
   display: inline;
+}
+header div.nav.scrolled {
+  height: 5vh;
+  /* Nouvelle hauteur réduite */
+  padding: 2% 0%;
+}
+header div.nav.scrolled div.navbar div.logo img {
+  width: 50%;
 }
 header div.main {
   display: flex;
@@ -402,6 +422,7 @@ div.right {
   flex-direction: column;
   justify-content: center;
   gap: 10%;
+  padding-left: 4%;
   height: 100%;
   width: 33.33333333%;
 }
@@ -409,15 +430,15 @@ div.right h1 {
   font-family: 'Krub';
   text-transform: uppercase;
   font-weight: 600;
-  letter-spacing: 5px;
+  letter-spacing: 2px;
 }
 div.right p {
   font-family: 'krub';
   font-weight: 600;
   font-size: 20px;
-  width: 90%;
   line-height: 170%;
-  letter-spacing: 3px;
+  text-align: left;
+  letter-spacing: 2px;
 }
 div.right a {
   text-transform: uppercase;
@@ -427,4 +448,255 @@ div.right a {
   font-weight: 700;
   font-size: 18px;
   background-color: #d6bb73;
+}
+section.divider {
+  z-index: 9;
+  padding: 0% 10%;
+  height: 220px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0px 0px 20px 8px rgba(0, 0, 0, 0.3);
+}
+section.divider div {
+  display: flex;
+  text-transform: uppercase;
+  align-items: center;
+  gap: 2%;
+}
+section.divider div p {
+  font-size: 48px;
+  font-family: oswald;
+  font-weight: 500;
+  color: #d6bb73;
+}
+section.divider div p:nth-of-type(2) {
+  color: #181818;
+  font-size: 48px;
+  font-family: oswald;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+section.divider div p:nth-of-type(3) {
+  color: #181818;
+  font-size: 24px;
+  font-family: oswald;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 25px;
+}
+section.divider div p:nth-of-type(3) span {
+  font-weight: 500;
+}
+section.innovation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 8% 0%;
+  position: relative;
+}
+section.innovation div.main {
+  width: 100%;
+  height: 100%;
+  background-image: url('../assets/img/circle.svg');
+  background-size: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
+  position: relative;
+}
+section.innovation div.main p {
+  font-family: 'krub';
+  font-size: 100px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+section.innovation div.main p:nth-of-type(2) {
+  font-weight: 300;
+}
+section.innovation div.main::before {
+  font-family: Krub;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: absolute;
+  content: '\25A0  Technologie innovante';
+  text-wrap: nowrap;
+  font-size: 20px;
+  writing-mode: vertical-rl;
+  transform: rotate(-180deg);
+  color: #181818;
+  left: 0;
+}
+section.innovation div.main::after {
+  font-family: Krub;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: absolute;
+  content: '\25A0  Technologie innovante';
+  font-size: 20px;
+  text-wrap: nowrap;
+  writing-mode: vertical-lr;
+  transform: rotate(-360deg);
+  color: #181818;
+  right: 0;
+}
+section.innovation div.bottom {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+section.innovation div.bottom div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 33.33333333%;
+}
+section.innovation div.bottom div p {
+  font-family: 'krub';
+  font-weight: 700;
+  color: #f1f1f1;
+  font-size: 40px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+section.target {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  padding-top: 5%;
+}
+section.target div.topline {
+  width: 1440px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5%;
+}
+section.target div.topline div.gauche div p {
+  text-transform: uppercase;
+  font-family: 'krub';
+  font-weight: 700;
+  font-size: 64px;
+}
+section.target div.topline div.gauche div:nth-of-type(2) p {
+  text-align: end;
+  font-size: 32px;
+  color: #d6bb73;
+  font-weight: 500;
+}
+section.target div.topline div.droite div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+section.target div.topline div.droite div::before {
+  position: absolute;
+  content: '\25A0';
+  left: -25%;
+  top: 20%;
+  font-size: 26px;
+}
+section.target div.topline div.droite div p {
+  font-family: 'krub';
+  font-weight: 700;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+section.target div.topline div.droite div p:nth-of-type(2) {
+  font-size: 20px;
+}
+section.target div.content {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 1440px;
+}
+section.target div.content .slider {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+section.target div.content .slider-content {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+}
+section.target div.content .text,
+section.target div.content .image {
+  width: 35%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+section.target div.content .text p {
+  color: #181818;
+  font-family: 'krub';
+  font-weight: 500;
+  font-size: 18px;
+  text-align: justify;
+}
+section.target div.content .text p:nth-of-type(1) {
+  font-size: 36px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: left;
+  padding: 10% 0% 5% 10%;
+}
+section.target div.content .text p:nth-of-type(1) span {
+  color: #d6bb73;
+}
+section.target div.content .slide {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  gap: 5%;
+}
+section.target div.content .slide p {
+  padding: 0% 10%;
+}
+section.target div.content .active {
+  display: flex;
+  justify-content: flex-start;
+}
+section.target div.content .navigation {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  bottom: 0;
+  user-select: none;
+}
+section.target div.content .navigation span {
+  cursor: pointer;
+}
+section.target div.content .navigation span:hover svg path {
+  fill: #d6bb73;
+}
+section.target div.content .navigation span.prev {
+  transform: rotate(90deg);
+}
+section.target div.content .navigation span.next {
+  transform: rotate(-90deg);
+}
+section.next {
+  height: 100vh;
 }
