--- a/mila_website/css/style.css
+++ b/mila_website/css/style.css
@@ -637,6 +637,12 @@ section.target div.flexing div.section.section--yellow {
   flex-direction: column;
   transition: all 1.3s ease;
   overflow: hidden;
+  position: relative;
+}
+section.target div.flexing div.section.section--yellow div.titre .texte {
+  width: 50%;
+  padding: 2%;
+  display: none;
 }
 section.target div.flexing div.section.section--yellow video {
   max-width: 80%;
@@ -649,6 +655,14 @@ section.target div.flexing div.section.section--yellow:hover {
 }
 section.target div.flexing div.section.section--yellow:hover div.titre {
   transition: all 1.3s ease;
+}
+section.target div.flexing div.section.section--yellow:hover div.titre .texte {
+  background-color: white;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-25%, -50%);
 }
 section.target div.flexing div.section.section--yellow:hover video {
   transition: all 1.3s ease;
