--- a/mila_website/css/style.less
+++ b/mila_website/css/style.less
@@ -578,6 +578,15 @@ section.target {
         flex-direction: column;
         transition: all 1.3s ease;
         overflow: hidden;
+        position: relative;
+
+        div.titre{
+          .texte{
+            width: 50%;
+            padding: 2%;
+            display: none;
+          }
+        }
 
         video {
           max-width: 80%;
@@ -591,6 +600,15 @@ section.target {
 
           div.titre {
             transition: all 1.3s ease;
+
+            .texte{
+              background-color: white;
+              display: flex;
+              position: absolute;
+              top: 50%; 
+              left: 25%;
+              transform: translate(-25%, -50%);
+            }
           }
 
           video {
